user route create with register endpint, also error handler middleware created

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HOST=localhost
-USERNAME=root
-PASSWORD=@#Ss9112000
+MYSQL_USERNAME=root
+PASSWORD="@#Ss9112000"
 DATABASE='node_sequelize_practice'
